--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -27,7 +27,7 @@
     </div>
     <div class="row">
       <div class="input-field col s12">
-        <a href="#dashboard" class="btn waves-effect waves-light col s12">Login</a>
+        <a href="#home" ng-click="login()" class="btn waves-effect waves-light col s12">Login</a>
       </div>
     </div>
     <div class="row">
