--- a/pages/dashboard/home.html
+++ b/pages/dashboard/home.html
@@ -11,13 +11,21 @@
 				<p class="healthtime rb"><i class="tiny material-icons">query_builder</i><span>9/30/2016 4:00pm</span></p>
 				<p class="healthdesc rb">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, dolor, maxime quisquam ipsa est similique hic. Cumque iste aut dolore.</p>
 			</div>
-			<p class="fr rb">Share with social...</p>
+			<div class="healthimage">
+				<ul class="clearifix">
+					<!-- <li><img src="http://www.saladbarmn.com/assets/img/slider/2.jpg"></li> -->
+				</ul>
+			</div>
 		</li>
 	</ul>
 </div>
 <div id="modalsocial" class="modal bottom-sheet">
-<div class="modal-content">
+<div class="modal-content modalsocial">
   <p>Share with these ff...</p>
-  <p></p>
+  <ul class="sociallinks clearfix">
+  	<li><img src="images/facebook.png"></li>
+  	<li><img src="images/twitter.png"></li>
+  	<li><img src="images/instagram.png"></li>
+  </ul>
 </div>
 </div>
