--- a/pages/dashboard/home.html
+++ b/pages/dashboard/home.html
@@ -5,9 +5,28 @@
 			<ul class="minilinks">
 				<li class="fl" ng-click=""><img class="fileupload" src="images/fileupload.png"></li>
 				<li class="fl" ng-click="share()"><img class="share" src="images/share.png"></li>
+				<li class="fl" ng-click="deletepost()"><i class="deletepost material-icons">close</i></li>
 			</ul>
 			<div class="healthinfo fl">
 				<p class="healthtitle">Eat Healthy Foods </p>
+				<p class="healthtime rb"><i class="tiny material-icons">query_builder</i><span>9/30/2016 4:00pm</span></p>
+				<p class="healthdesc rb">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, dolor, maxime quisquam ipsa est similique hic. Cumque iste aut dolore.</p>
+			</div>
+			<div class="healthimage">
+				<ul class="clearfix">
+					<li><img ng-click="modalimage()" src="http://www.saladbarmn.com/assets/img/slider/2.jpg"><i ng-click="cancelupload()" class="material-icons imagecancel">close</i></li>
+				</ul>
+			</div>
+		</li>
+		<li class="healthlist clearfix">
+			<p class="healthimg fl"><img src="images/calendar.gif"></p>
+			<ul class="minilinks">
+				<li class="fl" ng-click=""><img class="fileupload" src="images/fileupload.png"></li>
+				<li class="fl" ng-click="share()"><img class="share" src="images/share.png"></li>
+				<li class="fl" ng-click="deletepost()"><i class="deletepost material-icons">close</i></li>
+			</ul>
+			<div class="healthinfo fl">
+				<p class="healthtitle">Hangout </p>
 				<p class="healthtime rb"><i class="tiny material-icons">query_builder</i><span>9/30/2016 4:00pm</span></p>
 				<p class="healthdesc rb">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, dolor, maxime quisquam ipsa est similique hic. Cumque iste aut dolore.</p>
 			</div>
@@ -19,6 +38,12 @@
 		</li>
 	</ul>
 </div>
+<div id="modalimages" class="modal">
+	<div class="modal-content">
+	  <img src="http://www.saladbarmn.com/assets/img/slider/2.jpg">
+	</div>
+</div>
+
 <div id="modalsocial" class="modal bottom-sheet">
 <div class="modal-content modalsocial">
   <p>Share with these ff...</p>
