--- a/pages/dashboard/settings.html
+++ b/pages/dashboard/settings.html
@@ -1,2 +1,9 @@
-
-<h1>settings</h1>
+<div class="wrapper">
+	<ul class="settinglist">
+		<li><a href="#appsettings"><i class="material-icons">settings</i> App Settings</a></li>
+		<li><a href="#accountsettings"><i class="material-icons">settings</i> Account Settings</a></li>
+		<li><a href="#help"><i class="material-icons">live_help</i> Help Center</a></li>
+		<li><a href="#trash"><i class="material-icons">delete</i> Trash</a></li>
+		<li><a ng-click="logout()"><i class="material-icons">power_settings_new</i> Log out</a></li>
+	</ul>
+</div>
