--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="input-field col s12 center main_logo">
         <img src="images/main_logo.png" alt="" class="responsive-img valign profile-image-login">
-        <p class="center login-form-text">Tipidapp | {{ page }} </p>
+        <p class="center login-form-text">Lifenotes | {{ page }} </p>
       </div>
     </div>
     <div class="row margin">
