--- a/pages/dashboard/home.html
+++ b/pages/dashboard/home.html
@@ -3,7 +3,8 @@
 		<li class="healthlist clearfix">
 			<p class="healthimg fl"><img src="images/health.gif"></p>
 			<ul class="minilinks">
-				<li class="fl" ng-click=""><img class="fileupload" src="images/fileupload.png"></li>
+				<li class="fl"><i class="material-icons fileuploadvideo">videocam</i></li>
+				<li class="fl" ng-click=""><img class="fileuploadimage" src="images/fileupload.png"></li>
 				<li class="fl" ng-click="share()"><img class="share" src="images/share.png"></li>
 				<li class="fl" ng-click="deletepost()"><i class="deletepost material-icons">close</i></li>
 			</ul>
@@ -18,24 +19,7 @@
 				</ul>
 			</div>
 		</li>
-		<li class="healthlist clearfix">
-			<p class="healthimg fl"><img src="images/calendar.gif"></p>
-			<ul class="minilinks">
-				<li class="fl" ng-click=""><img class="fileupload" src="images/fileupload.png"></li>
-				<li class="fl" ng-click="share()"><img class="share" src="images/share.png"></li>
-				<li class="fl" ng-click="deletepost()"><i class="deletepost material-icons">close</i></li>
-			</ul>
-			<div class="healthinfo fl">
-				<p class="healthtitle">Hangout </p>
-				<p class="healthtime rb"><i class="tiny material-icons">query_builder</i><span>9/30/2016 4:00pm</span></p>
-				<p class="healthdesc rb">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, dolor, maxime quisquam ipsa est similique hic. Cumque iste aut dolore.</p>
-			</div>
-			<div class="healthimage">
-				<ul class="clearifix">
-					<!-- <li><img src="http://www.saladbarmn.com/assets/img/slider/2.jpg"></li> -->
-				</ul>
-			</div>
-		</li>
+		
 	</ul>
 </div>
 <div id="modalimages" class="modal">
