--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 	<meta charset="UTF-8">
 	<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-route.js"></script>
+	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,19 +21,11 @@
 		<div ng-view="">
 		</div>
 
-
-	<!-- Jquery -->
-	<script   src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-
-	<!-- Materialize JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-	<script src="js/script.js"></script>
 	<!-- Angularjs App -->
 	<script src="js/app/app.js"></script>
 
 	<!-- Angularjs Routing -->
 	<script src="js/route/route.js"></script>
-
 	
 	<!-- Angularjs Controllers -->
 	<script src="js/controller/MainController.js" type="text/javascript"></script>
@@ -39,6 +34,6 @@
 	<script src="js/controller/ForgotController.js" type="text/javascript"></script>
 	<script src="js/controller/NavigationController.js" type="text/javascript"></script>
 	<script src="js/controller/HomeController.js" type="text/javascript"></script>
-
+	<script src="js/controller/AppSettingsController.js" type="text/javascript"></script>
 </body>
 </html>
