--- a/pages/dashboard/home.html
+++ b/pages/dashboard/home.html
@@ -3,10 +3,10 @@
 		<li class="healthlist clearfix">
 			<p class="healthimg fl"><img src="images/health.gif"></p>
 			<ul class="minilinks">
-				<li class="fl"><i class="material-icons fileuploadvideo">videocam</i></li>
-				<li class="fl" ng-click=""><img class="fileuploadimage" src="images/fileupload.png"></li>
-				<li class="fl" ng-click="share()"><img class="share" src="images/share.png"></li>
-				<li class="fl" ng-click="deletepost()"><i class="deletepost material-icons">close</i></li>
+				<li class="fl"><i class="fa fa-video-camera" aria-hidden="true"></i></li>
+				<li class="fl" ng-click=""><i class="fa fa-camera" aria-hidden="true"></i></li>
+				<li class="fl" ng-click="share()"><i class="fa fa-share-alt" aria-hidden="true"></i></li>
+				<li class="fl" ng-click="deletepost()"><i class="fa fa-times" aria-hidden="true"></i></li>
 			</ul>
 			<div class="healthinfo fl">
 				<p class="healthtitle">Eat Healthy Foods </p>
@@ -15,7 +15,7 @@
 			</div>
 			<div class="healthimage">
 				<ul class="clearfix">
-					<li><img ng-click="modalimage()" src="http://www.saladbarmn.com/assets/img/slider/2.jpg"><i ng-click="cancelupload()" class="material-icons imagecancel">close</i></li>
+					<li><img ng-click="modalimage()" src="http://www.saladbarmn.com/assets/img/slider/2.jpg"><i ng-click="cancelupload()" class="fa fa-times imagecancel" aria-hidden="true"></i></li>
 				</ul>
 			</div>
 		</li>
