--- a/pages/dashboard/settings.html
+++ b/pages/dashboard/settings.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
 	<ul class="settinglist">
-		<li><a href="#appsettings"><i class="material-icons">settings</i> App Settings</a></li>
-		<li><a href="#accountsettings"><i class="material-icons">settings</i> Account Settings</a></li>
-		<li><a href="#trash"><i class="material-icons">delete</i> Trash</a></li>
-		<li><a href="#help"><i class="material-icons">live_help</i> Help Center</a></li>
-		<li><a ng-click="logout()"><i class="material-icons">power_settings_new</i> Log out</a></li>
+		<li><a href="#appsettings"><i class="material-icons">settings</i> App Settings<i class="tar fa fa-angle-right" aria-hidden="true"></i></a> </li>
+		<li><a href="#accountsettings"><i class="material-icons">settings</i> Account Settings<i class="tar fa fa-angle-right" aria-hidden="true"></i></a> </li>
+		<li><a href="#trash"><i class="material-icons">delete</i> Trash<i class="tar fa fa-angle-right" aria-hidden="true"></i></a></li>
+		<li><a href="#help"><i class="material-icons">live_help</i> Help Center<i class="tar fa fa-angle-right" aria-hidden="true"></i></a></li>
+		<li><a ng-click="logout()"><i class="material-icons">power_settings_new</i> Log out<i class="tar fa fa-angle-right" aria-hidden="true"></i></a></li>
 	</ul>
 </div>
