--- a/pages/dashboard/settings.html
+++ b/pages/dashboard/settings.html
@@ -4,6 +4,6 @@
 		<li><a href="#accountsettings"><i class="material-icons">settings</i> Account Settings<i class="tar fa fa-angle-right" aria-hidden="true"></i></a> </li>
 		<li><a href="#trash"><i class="material-icons">delete</i> Trash<i class="tar fa fa-angle-right" aria-hidden="true"></i></a></li>
 		<li><a href="#help"><i class="material-icons">live_help</i> Help Center<i class="tar fa fa-angle-right" aria-hidden="true"></i></a></li>
-		<li><a ng-click="logout()"><i class="material-icons">power_settings_new</i> Log out<i class="tar fa fa-angle-right" aria-hidden="true"></i></a></li>
+		<li><a ng-click="logout()"><i class="material-icons">power_settings_new</i> Log out</a></li>
 	</ul>
 </div>
