--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
 	<script src="js/controller/NavigationController.js" type="text/javascript"></script>
 	<script src="js/controller/HomeController.js" type="text/javascript"></script>
 	<script src="js/controller/AppSettingsController.js" type="text/javascript"></script>
+	<script src="js/controller/HelpController.js" type="text/javascript"></script>
 </body>
 </html>
